# caramba

./: .env.agent.example  .env.example  .env.panel.example  .gitignore  Cargo.toml  DESCRIPTION.md  README.md  current_state_2026-02-18.md  errors_analysis.md  errors_v2.md  errors_v3.md
apps/agent/: Cargo.toml
apps/agent/src/: decoy_service.rs  main.rs  scanner.rs  self_update.rs
apps/caramba-bot/: Cargo.toml
apps/caramba-bot/src/: api_client.rs  main.rs  state.rs
apps/caramba-bot/src/bot/: keyboards.rs  mod.rs  utils.rs
apps/caramba-bot/src/models/: mod.rs  payment.rs  store.rs
apps/caramba-bot/src/services/: admin_service.rs  logging_service.rs  mod.rs  pay_service.rs  promo_service.rs  settings_service.rs  store_service.rs
apps/caramba-installer/: Cargo.toml
apps/caramba-installer/assets/: caramba-bot.service  caramba-node.service  caramba-panel.service  caramba-sub.service
apps/caramba-installer/src/: diagnose.rs  install.rs  main.rs  restore.rs  setup.rs
apps/caramba-panel/: Cargo.toml  README.md
apps/caramba-panel/assets/css/: modern.css
apps/caramba-panel/scripts/: install.sh
apps/caramba-panel/src/: bot_manager.rs  cli.rs  main.rs  scripts.rs  settings.rs  subscription.rs  utils.rs
apps/caramba-panel/src/api/: client.rs  mod.rs
apps/caramba-panel/src/bot/: keyboards.rs  mod.rs
apps/caramba-panel/src/handlers/: admin_groups.rs  admin_network.rs  admin_orgs.rs  admin_sni.rs  admin_templates.rs  assets.rs  client.rs  frontend.rs  local_app.rs  mod.rs  node_control.rs  setup.rs
apps/caramba-panel/src/routes/: subscription.rs
apps/caramba-panel/src/services/: activity_service.rs  analytics_service.rs  billing_service.rs  catalog_service.rs  connection_service.rs  export_service.rs  generator_service.rs  geo_service.rs  infrastructure_service.rs  logging_service.rs  mod.rs  monitoring.rs  notification_service.rs  orchestration_service.rs  org_service.rs  pay_service.rs  promo_service.rs  pubsub_service.rs  redis_service.rs  referral_service.rs  rotation_service.rs  security_service.rs  sni_monitor.rs  store_service.rs  store_service_quick_wins.rs  subscription_service.rs  telemetry_service.rs  traffic_service.rs  update_service.rs  user_service.rs
apps/caramba-panel/src/singbox/: client_generator.rs  config.rs  generator.rs  mod.rs  reality.rs  repro_bug.rs  subscription_generator.rs  tests.rs
apps/caramba-panel/templates/: admin_group_edit.html  admin_groups.html  admin_orgs.html  admin_sni.html  admin_templates.html  analytics.html  api_keys.html  base.html  bot.html  bot_logs.html  frontends.html  login.html  logs.html  node_edit_modal.html  node_inbounds.html  node_manage.html  node_manual_install.html  node_rescue_modal.html  nodes.html  plan_edit_modal.html  plans.html  promo_manage.html  settings.html  store_products.html  user_details.html  users.html
apps/caramba-panel/templates/partials/: bot_status.html  nodes_rows.html  statusbar.html  visual_editor.html
apps/caramba-panel/tests/: sql_dialect_guard.rs
apps/caramba-sub/: Cargo.toml
apps/caramba-sub/.cargo/: config.toml
apps/caramba-sub/src/: config.rs  geo_service.rs  main.rs  panel_client.rs  singbox_generator.rs
apps/caramba-sub/src/handlers/: app.rs  health.rs  mod.rs  proxy.rs  subscription.rs
apps/panel/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup_guide.md
apps/panel/.sqlx/: query-2acac52e1df551202e0df96086fa7db88e975b59ae9f7293a64ce1aa495b5364.json  query-43932085e22c4bf1243105181aa946b776220f57bf8940566bb5141eb42bb9c0.json  query-a22f1aaefdcd49b7f03a39bae5f6c4c7aa9fbba7a280033668e0f9e5f6104d4a.json  query-ac19dea610cf576164a783539c0ba5b066c3fdae44795e4b7504d6073cce20fb.json  query-e3bd062b36b3cff096a4429ea1cb34ee7f72ee4bccd041557f695d3dcc1c727a.json
apps/panel/assets/: corporate_mimicry.html
apps/panel/assets/css/: modern.css
apps/panel/migrations/: 001_complete_schema.sql  005_create_plan_inbounds.sql  007_plan_nodes.sql  20260201_consolidated_schema.sql  20260205000000_init.sql  20260206000000_fix_missing_columns.sql  20260206010000_add_missing_is_trial.sql  20260209000000_lifecycle.sql  20260210000000_add_node_capacity.sql  20260211000000_architecture_refactor.sql  20260212000000_add_active_conns.sql  20260212000000_family_plans.sql  20260212000001_advanced_telemetry.sql  20260212000001_family_invites.sql  20260213000000_organizations.sql  20260216010000_node_specs.sql  20260216030000_fix_promo_codes.sql
apps/panel/migrations/archive/: 001_complete_schema.sql  002_sni_rotation.sql  006_remove_ssh.sql  008_analytics_daily.sql  009_quick_wins.sql  010_subscription_urls.sql  011_frontend_servers.sql  012_billing_referrals.sql  012_secure_frontend_tokens.sql  013_channel_trials.sql  013_node_geoip.sql  014_cart_items.sql  015_bandwidth_shaping.sql  016_node_telemetry.sql
apps/panel/public/js/: admin_templates_editor.js
apps/panel/scripts/: install.sh  setup_hans.sh  setup_node.sh
apps/panel/src/: bot_manager.rs  cli.rs  db.rs  filters.rs  main.rs  node_manager.rs  scripts.rs  settings.rs  ssh.rs  subscription.rs  utils.rs
apps/panel/src/api/: client.rs
apps/panel/src/bot/: keyboards.rs  mod.rs  utils.rs
apps/panel/templates/: admin_group_edit.html  admin_groups.html  admin_sni.html  admin_template_edit_modal.html  admin_templates.html  analytics.html  api_keys.html  base.html  bot.html  bot_logs.html  dashboard.html  frontends.html  inbound_edit_modal.html  login.html  logs.html  node_edit_modal.html  node_inbounds.html  node_manage.html  node_manual_install.html  node_rescue_modal.html  nodes.html  plan_bindings.html  plan_edit_modal.html  plans.html  promo_manage.html  settings.html  setup.html  store_categories.html  store_orders.html  store_products.html  tools.html  transactions.html  user_details.html  users.html
libs/caramba-db/: Cargo.toml
libs/caramba-db/migrations/: 20260205000000_init.sql  20260218091000_add_nodes_relay_id.sql  20260218101500_nodes_schema_compat.sql  20260219012000_inbounds_sni_schema_compat.sql  20260222000000_device_leases.sql
libs/caramba-db/src/: lib.rs  utils.rs
scripts/: install.sh  (+4 more)
(+214 files in other folders)
