[package]
name = "exarobot-agent"
version = "0.9.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
machine-uid = "0.5" # For persistent HWID
dotenvy = "0.15"
exarobot-shared = { path = "../../libs/shared" }
md5 = "0.8"
rand = "0.9"
sysinfo = "0.38" # Telemetry
sha2 = "0.10"
