[package]
name = "caramba-bot"
version = "0.3.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls-tokio"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
caramba-shared = { path = "../../libs/caramba-shared" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
