[package]
name = "caramba-sub"
version = "0.3.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "trace"] }

# HTTP client (for panel API)
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config loading
config = "0.15"

# Base64 for subscription formats
base64 = "0.22"
urlencoding = "2.1"

# MIME type detection for static files
mime_guess = "2.0"
uuid = { version = "1.11", features = ["v4"] }

# GeoIP (for Phase 4)
maxminddb = { version = "0.24", optional = true }

[features]
default = ["geoip"]
geoip = ["maxminddb"]

[[bin]]
name = "caramba-sub"
path = "src/main.rs"
