[package]
name = "exarobot"
version = "0.9.1"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "chrono", "tls-rustls"] }
askama = "0.12"
askama_axum = "0.4"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
dotenvy = "0.15"
teloxide = { version = "0.13", features = ["macros"] }

rust-embed = "8.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }



thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "limit", "set-header", "compression-full"] }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bcrypt = "0.15"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.2"
redis = { version = "0.24", features = ["tokio-comp"] }
bb8-redis = "0.14"
sha2 = "0.10"
hmac = "0.12"
md5 = "0.7"






exarobot-shared = { path = "../../libs/shared" }
serde_yaml = "0.9"
urlencoding = "2.1"
url = "2.5"



[build-dependencies]
# For embedding scripts later if needed
# rust-embed = "8.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
