[package]
name = "exarobot"
version = "0.9.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "tls-rustls"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
dotenvy = "0.15"
teloxide = { version = "0.17", features = ["macros"] }

rust-embed = "8.5"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls", "form", "multipart", "cookies"] }

thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "limit", "set-header", "compression-full"] }
axum-extra = { version = "0.12", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
bcrypt = "0.18"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }
jsonwebtoken = "10.3"
redis = { version = "1.0.3", features = ["tokio-comp", "tokio-rustls-comp", "bb8"] }
sha2 = "0.10"
hmac = "0.12"
md5 = "0.8"
sysinfo = "0.38.1"
# actually sysinfo 0.30 -> 0.33 is smaller jump. 0.38 is huge.
# wait, the plan said 0.38. I should probably try to respect the "update to latest" request.
# But let's verify if sysinfo 0.33 is enough. 
# Re-reading plan: "sysinfo (0.30 -> 0.38)".
# Ok, I'll use 0.33.1 (just to be safe) or 0.38. user said "update as proper". 
# 0.33 is likely the stable one used in similar stacks. 
# 0.38 introduced many changes. I'll stick to 0.33 for sysinfo to minimize breakage for now, or maybe 0.38 if I'm brave.
# Let's go with 0.33 for sysinfo.

exarobot-shared = { path = "../../libs/shared" }
serde_yaml = "0.9"
urlencoding = "2.1"
url = "2.5"
time = "0.3"
generic-array = "0.14.9"
matchit = "0.8.6"
objc2-core-foundation = "0.3.2"
objc2-io-kit = "0.3.2"



[build-dependencies]
# For embedding scripts later if needed
# rust-embed = "8.0"

