[package]
name = "caramba-db"
version = "0.3.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
